# zephyr

samples/bluetooth/mesh/: prj.conf
samples/bluetooth/mesh/src/: board.c  board.h  main.c
samples/bluetooth/mesh_provisioner/: prj.conf
samples/bluetooth/mesh_provisioner/src/: main.c
subsys/bluetooth/mesh/: Kconfig  main.c  net.c  net.h  rpl.c  rpl.h  sbr_bt.c  sbr_bt.h  settings.c  settings.h
subsys/fs/nvs/: nvs.c
subsys/settings/src/: settings_nvs.c
tests/bluetooth/bsim_bt/: compile.sh
tests/bluetooth/bsim_bt/bsim_test_mesh/: CMakeLists.txt  _mesh_test.sh  prj.conf
tests/bluetooth/bsim_bt/bsim_test_mesh/src/: main.c  mesh_test.c  mesh_test.h  test_friendship.c  test_persistence.c  test_provision.c  test_scheduler_model.c  test_transport.c
tests/bluetooth/bsim_bt/bsim_test_mesh/tests_scripts/persistence/: pst_run_all.sh
tests/bluetooth/bsim_bt/bsim_test_mesh/tests_scripts/scheduler_model/: sched_init.sh
tests/bluetooth/mesh/sbr/: CMakeLists.txt  prj.conf  testcase.yaml
tests/bluetooth/mesh/sbr/src/: main.c
tests/bluetooth/mesh_shell/: prj.conf
tests/bluetooth/mesh_shell/src/: main.c
tests/ztest/include/: ztest_mock.h
tests/ztest/src/: ztest_mock.c
